# KPiX-Analysis

./: .gitignore  CMakeLists.txt  Makefile  README.md  emptybinfile.txt  init.sh
data/testbeam201902/0207/: disabler_k20.txt  disabler_k22.txt  disabler_k30.txt
data/testbeam201902/0208/: disabler_k20.txt  disabler_k22.txt  disabler_k30.txt
data/testbeam201902/0208/ECALW/: disabler_k17.txt  disabler_k19.txt  disabler_k28.txt  disabler_k30.txt
data/testbeam201902/0211/: disabler_k17.txt  disabler_k19.txt  disabler_k19_250threshold.txt  disabler_k19_250threshold_noise3.txt  disabler_k30.txt
data/testbeam201902/0212/: disabler_k17.txt  disabler_k28.txt  disabler_k30.txt
data/testbeam201902/0213/: disabler_k28.txt  disabler_k30.txt
data/testbeam201902/0214/: disabler_k30.txt
include/: LinkDef.h  analysis.h  ntupleMaker.h  test.h
macros/: adcPrinter.c  fCPrinter.c  timedEvts.c
output/: emptybinfile.txt
python/: calib_extract.py  channel_disabler.dev.py  channel_disabler.py  channel_disabler_new.py  channel_disabler_newer.py  ecal_mapping.py  ecal_mapping_test.py  plot_producer.py  strip_mapping.dev.py  strip_mapping.py
python/KPiX_xml_mapping/DC_channel_mapping/: kpix_channel_mapping_AD.py  map_DC_first128_xml.txt  mapl_xml.txt  tracker_to_kpix_right.txt
python/KPiX_xml_mapping/Dieter_Survey_file/: kpix_channel_mapping_survey_channels.py  map_survey_and_DC_deactivated.txt  map_survey_deactivated.txt  survey_original.txt  tracker_to_kpix_left.txt
python/KPiX_xml_mapping/Noisy_channel_analysis/: kpix_channel_mapping_noisy_channels.py
python/old_to_clean/: strip_mapping_20180817.py
scripts/: S41_calib_plots_script.sh  S55_calib_plots_script.sh  S55_self_trig_plot_script.sh  ext_trig_analyse_procedure.sh  ext_trig_plot_script.sh  sstrip_dstrip_cut_scan.sh  tb022019_calib_analyse.sh  tb022019_calib_plots_script.sh  tb022019_ext_trig_analyse.sh  tb022019_ext_trig_bias_scan_analysis.sh  tb022019_ext_trig_bias_scan_plot_script.sh  tb022019_ext_trig_plot_script.sh  tb022019_ext_trig_plot_script_svg.sh  tb022019_self_trig_plot_script.sh  tb022019_self_trigger_analyse.sh  tb_analyse_script.sh  tb_external_NG_trigger_analyse.sh  tb_plot_script.sh  testbeam_time_diff_script.sh
scripts/obsolete/: Makefile.20180830
src/: CalibAnaYml.cxx  DuoKpix_CalibFitter.cxx  analysis.cxx  analysisEcal.cxx  analysisExternal.cxx  analysisExternal_step2.cxx  analysisLite.cxx  calibrationFitter.cxx  cluster_analysis.cxx  count.cxx  new_CalibrationFitter.cxx  ntupleTest.cxx  pedestal.cxx  printDat.cxx  useYmlVariables.cxx  ymlCalibrationFitter.cxx  ymlHandler.cxx  ymlReader.cxx
test/: CalibAnaYml.cxx  SimConfig.txt  Test1Ch.txt  YmlVariables.cpp  YmlVariables.h  cal.yml  calcfg.yml  calstate.yml  ntupleTest.cxx  printDat_CAL-20181005_134809.txt  run.sh  useYmlVariables.cxx  ymlHandler.cxx  ymlReader.cxx
test/wmq_yaml/: emitter_eg_libyaml.cxx  out_emitter.yml  test.yml  yml.note  ymlEmitter_yaml-cpp.cxx  ymlHandler.cxx  ymlParser_yaml-cpp.cxx  ymlReader_libyaml.cxx  ymlWriter_eg.cxx  ymlWriter_libyaml.cxx
